--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,10 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "KeyVaultURL": "https://eastus-kv.vault.azure.net/",
+  "KeyVaultRefreshSeconds": 300,
+  "mySection": {
+    "mySecretName": "Some sectret value in appsettings.Development.json"
   }
 }
