--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "mySection": {
+    "mySecretName": "Some sectret value in appsettings.json"
+  },
+  "AllowedHosts": "*",
+  "appSettings": {
+  },
+  "ConnectionStrings": {
+
+  }
 }
